--- a/Iam/iam.css
+++ b/Iam/iam.css
@@ -36,7 +36,7 @@
     background-color: aliceblue;    
 }
 .tabshapka li {
-    font-size: 27px;
+    font-size: 25px;
     list-style: none;
 }
 .logoshapka {
@@ -96,9 +96,11 @@ div .tizer_h2 {
 }
 .tizer_logo_text {
     text-align: center;
-    line-height: 42px;
+    line-height: 35px;
     font-size: 20px;
-    width: 400px;
+    width: 330px;
+    position: relative;
+    bottom: 30px;
 }
 .tizer_logo_h3 {
     text-transform: uppercase;
@@ -106,8 +108,7 @@ div .tizer_h2 {
 
 .myprojeckt {
     width: 1170px;
-    margin: 0 auto;
-    border: 4px solid black;
+    margin: 50px auto;
 }
 
 .myprojecktc_conteiner {
@@ -119,6 +120,7 @@ div .tizer_h2 {
     display: flex;
     justify-content:space-between;
     flex-wrap: wrap;
+    margin: 20px 0;
 }
 .tabl1 {
     border: 4px solid black;
@@ -129,6 +131,7 @@ div .tizer_h2 {
     width: 239px;
     text-align: center;
     padding: 10px 0;
+    box-shadow: 4px -4px;
 }
 .tabl1 h3 {
     text-transform: uppercase;
@@ -152,6 +155,7 @@ div .tizer_h2 {
     width: 239px;
     text-align: center;
     padding: 10px 0;
+    box-shadow: 4px -4px;
 }
 .tab2 h3 {
     text-transform: uppercase;
@@ -175,6 +179,7 @@ div .tizer_h2 {
     width: 239px;
     text-align: center;
     padding: 10px 0;
+    box-shadow: 4px -4px;
 }
 .tabl3 h3 {
     text-transform: uppercase;
@@ -198,6 +203,7 @@ div .tizer_h2 {
     width: 239px;
     text-align: center;
     padding: 10px 0;
+    box-shadow: 4px -4px;
 }
 .tabl4 h3 {
     text-transform: uppercase;
@@ -212,6 +218,83 @@ div .tizer_h2 {
     font-size: large;
 }
 
+.myprojeckt_inner2 {
+    display: flex;
+    justify-content: space-around;
+    flex-wrap: wrap;
+}
+
+
+.myfutureplan {
+    width: 1170px;
+    margin: 50px auto;
+}
+
+.myfutureplan_conteiner {
+    width: auto;
+    margin: 0 auto;
+}
+
+.myfutureplan_inner {
+    display: flex;
+    flex-direction: column;
+}
+.myfutureplan_inner h2 {
+    text-align: center;
+    text-transform: uppercase;
+    font-family: "Yeseva One", system-ui;
+    font-weight: 400;
+    font-style: normal;
+}
+.myfutureplan_inner p {
+    text-align: center;
+    line-height: 30px;
+    font-family: "Cormorant Garamond", serif;
+    font-weight: 400;
+    font-style: normal;
+    font-size: 25px;
+}
+
+
+.contact {
+    width: 800px;
+    margin: 50px auto;
+}
+
+.contact_conteiner {
+    width: auto;
+    margin: 0 auto;
+}
+
+.contact_inner {
+    display: flex;
+    justify-content: space-evenly;
+    flex-wrap: wrap;
+}
+.telega {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    line-height: 1px;
+}
+.insta {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    line-height: 1px;
+}
+.vk {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    line-height: 1px;
+}
+.github {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    line-height: 1px;
+}
 
 
 
