--- a/FigmaMaket/maket.css
+++ b/FigmaMaket/maket.css
@@ -31,6 +31,7 @@ nav {
     font-style: normal;
     font-size: 35px;
     margin: 20px 0;
+    color: rgba(198, 35, 20, 1);
 }
 .tabl_h1 {
     font-family: 'Courier New', Courier, monospace;
@@ -41,6 +42,7 @@ nav {
     line-height: 30px;
     font-family: Georgia, 'Times New Roman', Times, serif;
     text-align: left;
+    font-weight: 600;
 }
 
 .main_tab {
@@ -92,7 +94,7 @@ nav {
     font-weight: 100;
 }
 .sec1_h3 {
-    margin: 15px 210px;
+    margin: 15px 250px;
     font-size: 40px;
 }
 
@@ -118,18 +120,20 @@ nav {
     background-color: brown;
     color: aliceblue;
 }
+.story_inner a:link {
+    text-decoration: none;
+    color: aliceblue;
+}
 .story_inner li:nth-child(1) {
     font-size: 20px;
 }
 
 
-.sec2 {
-    border: 4px solid red;
-}
 
 .sec2_conteoner {
     width: auto;
     margin: 0 auto;
+    background-color: rgba(239, 239, 239, 1);
 }
 
 .sec2_flex {
@@ -141,12 +145,16 @@ nav {
 }
 .sec2_tabl {
     display: flex;
-    justify-content: space-evenly;
+    justify-content: space-between;
     align-items: center;
+    width: 1170px;
+    margin: 20px 0;
 }
+
 
 .t1 {
     border: 4px solid black;
+    box-shadow: 4px -4px black;
     width: 230px;
 }
 .t1 li{
@@ -156,9 +164,15 @@ nav {
     text-align: center;
     padding: 15px 0;
 }
+.t1 li:nth-child(2) {
+    font-weight: 700;
+    font-size: 50px;
+    color: rgba(198, 35, 20, 1);
+}
 
 .t2 {
     border: 4px solid black;
+    box-shadow: 4px -4px black;
     width: 230px;
 }
 .t2 li {
@@ -167,5 +181,105 @@ nav {
     align-items: center;
     text-align: center;
     padding: 15px 0;
+    
+}
+.t2 li:nth-child(2) {
+    font-weight: 700;
+    font-size: 59px;
+    color: rgba(198, 35, 20, 1);
+}
+
+.t3 {
+    border: 4px solid black;
+    box-shadow: 4px -4px black;
+    width: 230px;
+}
+.t3 li {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+    padding: 15px 0;
+}
+.t3 li:nth-child(2) {
+    font-weight: 700;
+    font-size: 59px;
+    color: rgba(198, 35, 20, 1);
+}
+
+.t1 a:link {
+    background-color: rgba(19, 14, 39, 1);
+    color: white;
+    text-decoration: none;
+    padding: 5px 35px;
+    border-radius: 10px;
+}
+.t1 a:link:hover {
+    background-color: rgba(198, 35, 20, 1);
+}
+
+.t2 a:link {
+    background-color: rgba(19, 14, 39, 1);
+    color: white;
+    text-decoration: none;
+    padding: 5px 35px;
+    border-radius: 10px;
+}
+.t2 a:link:hover {
+    background-color: rgba(198, 35, 20, 1);
+}
+
+.t3 a:link {
+    background-color: rgba(19, 14, 39, 1);
+    color: white;
+    text-decoration: none;
+    padding: 5px 35px;
+    border-radius: 10px;
+}
+.t3 a:link:hover {
+    background-color: rgba(198, 35, 20, 1);
+}
+
+.sec2_flex h2 {
+    font-size: 50px;
+    font-weight: 700;
+    color: rgba(19, 14, 39, 1);
+    margin: 20px 0;
+}
+
+footer {
+    margin: 0 auto;
+    height: auto;
+}
+
+.sec3 {
+    background-color: rgba(19, 14, 39, 1);
+    color: aliceblue;
+}
+
+.sec3_conteiner {
+    width: auto;
+    margin: 0 auto;
+}
+
+.sec3_tab {
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    padding: 30px;
+}
+.sec3_tab li {
+    list-style-type: none;
+}
+.sec3_tab li:nth-child(2) {
+    font-family: "Pacifico", cursive;
+    font-weight: 400;
+    font-style: normal;
+    font-size: 35px;
+    color: rgba(198, 35, 20, 1);
+    padding: 0 0 5px 0;
+}
+.sec3_tab li:nth-child(1) {
+    font-size: 20px;
 }
 
