--- a/RobinWilliams/rb.css
+++ b/RobinWilliams/rb.css
@@ -164,7 +164,7 @@ main {
 
 .skill {
     display: flex;
-    justify-content: space-between;
+    justify-content: space-around;
     padding: 50px;
     background-color: black;
 }
@@ -280,6 +280,64 @@ main {
     line-height: 24px;
     color: #8491A0;
 }
+
+
+.logo_after_phil ul{
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    list-style: none;
+    background-color: #000000;
+    padding: 25px;
+}
+
+
+.myprog {
+    border: 4px solid yellow;
+    margin: 0 auto;
+    padding: 100px;
+}
+.myprog_tabl {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+}
+
+.myproge_tabl_one {
+    display: flex;
+    flex-direction: column;
+    border: 4px solid #5221E6;
+}
+.mpj_one p {
+    font-weight: 700;
+    font-size: 16px;
+    line-height: 24px;
+}
+.mpj_one h3 {
+    font-weight: 700;
+    font-size: 55px;
+    line-height: 66px;
+}
+.mpj_one {
+    text-align: center;
+}
+.mpj_two {
+    text-align: left;
+    padding: 10px;
+}
+.mpj_two h4 {
+    font-weight: 700;
+    font-size: 24px;
+    line-height: 36px;
+}
+.mpj_two p {
+    font-weight: 400;
+    font-size: 18px;
+    line-height: 27px;
+    width: 550px;
+}
+
+
 
 
 
