--- a/RobinWilliams/rb.css
+++ b/RobinWilliams/rb.css
@@ -618,7 +618,6 @@ main {
     flex-direction: column;
     justify-content: left;
     padding: 50px;
-    border: 4px solid yellow;
     background-color: #000000;
 }
 .photography_text {
@@ -661,7 +660,13 @@ main {
 .photography_menu a:link:hover {
     background-color: #5221E6;
 }
-
+.photography_photo ul {
+    display: flex;
+    justify-content: left;
+}
+.photography_photo li {
+    padding-right: 24px;
+}
 
 
 
