--- a/RobinWilliams/rb.css
+++ b/RobinWilliams/rb.css
@@ -9,7 +9,9 @@ header {
 }
 main {
     margin: 0 auto;
-    border: 4px solid red;
+}
+footer {
+    margin: 0 auto; 
 }
 .conteiner {
     margin: 0 auto;
@@ -667,6 +669,116 @@ main {
 .photography_photo li {
     padding-right: 24px;
 }
+
+
+.lgt {
+    margin: 0 auto;
+    display: flex;
+    justify-content: space-evenly;
+    background-color: black;
+    padding: 120px 182px;
+}
+.lgt_ul_one {
+    text-align: left;
+}
+.lgt_ul_one h3 {
+    font-weight: 700;
+    font-size: 55px;
+    line-height: 55px;
+    margin-bottom: 24px;
+    color: #FFFFFF;
+}
+.lgt_ul_one p {
+    font-size: 18px;
+    line-height: 27px;
+    font-weight: 400;
+    color: #8491A0;
+    width: 526px;
+}
+
+.lgt_ul_two form {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 520px;
+}
+.lgt_ul_two input {
+    width: 520px;
+    height: 50px;
+    background-color: #181823;
+    border: none;
+    color: white;
+    margin-bottom: 40px;
+    padding: 10px;
+}
+.lgt_ul_two p {
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 24px;
+    color: #FFFFFF;
+    margin-bottom: 8px;
+}
+#textareaid {
+    width: 526px;
+    height: 100px;
+    background-color: #181823;
+    border: none;
+    color: white;
+    padding: 10px;
+}
+.footer_final {
+    display: flex;
+    justify-content:space-between;
+    align-items: center;
+    background-color: #181823;
+    padding: 80px 72px;
+}
+.footer_final_logos {
+    text-align: left;
+}
+.footer_final_logos img {
+    margin-bottom: 32px;
+}
+.footer_final_logos_ms img{
+    padding-right: 16px;
+    margin-bottom: 142px;
+}
+.footer_final_logos p {
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 24px;
+    color: #8491A0;
+    width: 426px;
+}
+
+.footer_final_ul {
+    display: flex;
+    justify-content:space-around;
+}
+.footer_final_ul_one ul {
+    list-style-type: none;
+    color: #FFFFFF;
+}
+.footer_final_ul_two ul {
+    list-style-type: none;
+    color: #FFFFFF;
+}
+.footer_final_ul_one li {
+    padding: 24px;
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 24px;
+}
+.footer_final_ul_two li {
+    padding: 24px;
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 24px;
+}
+.footer_final_ul_one {
+    margin-right: 48px;
+}
+
 
 
 
